2003-06-30  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Add gimp-gap.

2003-06-28  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove libglade, which has no translatable
	string.

2003-06-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed a sorting error.

2003-06-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add the modules from the 2.4
	modules list.

2003-06-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branches for evolution and gtkhtml.

2003-06-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gossip.

2003-06-16  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: drgenius2 becomes drgeo.

2003-06-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove popt (not gnome software), gnomeicu
	  from gnome-1.4 (no future release), mlview from gnome-2.4 (doesn't
	  belong).

2003-06-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Move drgenius and sodipodi to gnome-2.4.
	  Fix pot name for gedit HEAD.

2003-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-mud.

2003-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added back gtranslator.

2003-06-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-netstatus.

2003-06-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: nautilus-media has been branched for
	gnome-2-2.

2003-06-05  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: gnome-system-tools is in fifth-toe now.
	  Remove gnome-print-admin entirely, since its functionality has
	  already been mereged into gnome-print during GNOME 1.4 days.

2003-05-30  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Changed gedit-plugins pot name.

2003-05-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added genius.
