@@ -2395,6 +2395,17 @@
       </component>
     </version>
   </module>
+  <module name="nautilus-rc">
+    <version release="gnome-2.4">
+      <component name="nautilus-rc" dir="nautilus-rc" group="extras">
+	<podir dir="po"/>
+	<potname name="nautilus-rc.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="nautilus-rpm">
     <version release="gnome-2.4">
       <component name="nautilus-rpm" dir="nautilus-rpm" group="extras">
