@@ -1,3 +1,7 @@
+2003-07-02  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added nautilus-rc.
+
 2003-06-30  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Add gimp-gap.
